networkpolicy/nginx-pod-curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace:
  labels:
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
  - name: curl
    image: tutum/curl:latest
    command:
      - sleep
      - "3600"
  terminationGracePeriodSeconds: 10
